# palette_gen

./: Cargo.toml  README.md  test.txt
impls/: impls.md
impls/wezterm/: colors.lua  config.md
src/: args.rs  cli.rs  error.rs  main.rs  palette.rs  serializers.rs
