[package]
name = "palette_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colorful = "0.2.2"
hex_color = "2.0.0"
image = "0.24.7"
oklab = "1.0.0"
okolors = "0.4.0"
thiserror = "1.0.49"
